feat: Candidate page (#1)
* Type and start adding candidate data
* Implement automatic switching between light and dark themes
* clean and name color variables
* switch to using variables for colors (to support theming)
* feat: toolbar styles, homepage start
* feat(candidate page): questions can be unanswered but have comments
* feat(candidate page): show candidate and user answer indicators on yes-no -questions
* feat(candidate page): expand and collapse candidate answer list
* chore: fix eslint config, configure husky, stylelint and lint-staged
* feat(candidate page): show user and candidate answer indicators for on radio options

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -6,12 +6,22 @@
     "strongDisagree": "Completely disagree"
   },
   "appName": "Vaalikone",
+  "candidateDetails": {
+    "creator": "Creator",
+    "github": "Github",
+    "website": "Library website"
+  },
+  "candidateSections": {
+    "answers": "Candidate's answers",
+    "backgroundInfo": "Candidate's infromation",
+    "electionPromises": "Election promises"
+  },
   "candidates": "Candidates",
   "electionName": "2024 Component Library Election",
   "frontPage": {
     "start": "Start",
     "subtitle": "The React component library election is on the way. Find out more about the candidates with the election compass.",
-    "title": "Welcome to the election compass!"
+    "title": "Welcome to the election compass"
   },
   "navigation": {
     "frontPage": "Front page",
@@ -22,7 +32,8 @@
     "hide": "Hide question",
     "no": "No",
     "whatAbout": "What's this about?",
-    "yes": "Yes"
+    "yes": "Yes",
+    "yourAnswer": "Your answer"
   },
   "questionPage": {
     "description": "Find the most suitable candidate by considering the statements below. For help, try the \"What's this all about?\" icon.",
@@ -36,5 +47,7 @@
   "shareOnline": {
     "subtitle": "Tell your friends about the compass",
     "title": "Share the election compass"
-  }
+  },
+  "showFewer": "Show fewer",
+  "showMore": "Show more"
 }
