Feat: Calculating and display candidate matches (#3)
* feat(candidate match): reverse-engineer and test match percentage calculation

* feat(candidate match): placeholders and basic match buttons on match toolbar

* feat(candidate match): calculate top 4 matches

In the case of my data, it is sort of silly to calculate top X matches, as I only have 4 candidate libraries.
But to keep code generic (and support switching the content or adding more candidates) I figured I'd implement the logic.

* feat(candidate match): match visibility toggle styles

* feat(candidate match): additional info modal, draft of candidate modal, button link to show on candidate modal

* feat(candidate matches): reveal match toolbar on scroll

* feat(questions page): Find your candidate -button autoscrolls past page header

* feat(candidate match): modal opened from each candidate match

* chore: add Finnish translations

* feat: footer skeleton

* feat: footer links, remove separate footer component (not reused)

* chore: run test on push

* test: matchPercentage returns 0 to 100

* chore: set default test script to run tests once

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -6,9 +6,12 @@
     "strongDisagree": "Completely disagree"
   },
   "appName": "Vaalikone",
-  "candidateDetails": {
+  "candidate": {
+    "createdBy": "By",
     "creator": "Creator",
+    "getToKnow": "Get to know the candidate",
     "github": "Github",
+    "number": "No.",
     "website": "Library website"
   },
   "candidateSections": {
@@ -17,7 +20,11 @@
     "electionPromises": "Election promises"
   },
   "candidates": "Candidates",
+  "closeModal": "Close modal",
   "electionName": "2024 Component Library Election",
+  "footer": {
+    "frontPageLink": "Front page"
+  },
   "frontPage": {
     "start": "Start",
     "subtitle": "The React component library election is on the way. Find out more about the candidates with the election compass.",
